[package]
name = "pscan"
authors = ["Francisco Braço-Forte <f.s.f.b2001@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pscan"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
pnet = "0.34.0"
anyhow = "1.0.79"
thiserror = "1.0"
log = "0.4.20"
url = "2"
rayon = "1.8"
libc = "0.2"
once_cell = "1.19.0"
rand = "0.8.5"
default-net = "0.21"
